refactored hamburger menu into small menu on mobile view. Will style into hamburger view in later feature. Fixed home page card outline styles

--- a/src/components/Signup/Signup.scss
+++ b/src/components/Signup/Signup.scss
@@ -119,8 +119,13 @@ height: 100vh;
         font-family: 'Open Sans';
         margin-top: 1.5rem;
         margin-bottom: 2rem;
+        cursor: pointer;
       
     }  
+
+    &__btn:hover{
+        background-color: $button-hover;
+    }
 }
 
 .auth-logo{
